test/tests/compiler/13_floating-point_numbers/invalid_parse/invalid_type_specifier.plx
pub fn main(none) i32 {
    # "Unsigned double" is not a valid type specifier
    d: u32 f64 = 10.0
    return 0
}
